feat: add rest endpoints for functionality
Reworked ServiceConnectorUtils output and adapted tests
